<resources>
    <string name="app_name">Sách Nói BKIC</string>
    <string name="action_settings">Settings</string>
    <string name="speech_prompt">Đọc từ cần tìm&#8230;</string>
    <string name="speech_not_supported">Xin lỗi, điện thoại của bạn không hỗ trợ tìm kiếm bằng giọng nói</string>
    <string name="text_splash">
        <![CDATA[<b>
            <font color = "#FF7033" size=+3>Sách</font>
            <font color = "#4A34C4" size=+3>Nói</font>
            <font color = "#097CD1" size=+3>BKIC</font>]]>
    </string>
    <string name="creator">Creator</string>
    <string name="text_creator">
        <![CDATA[<b>
            <font color = "#FF7033" size=+3>By:</font>
            <font color = "#4A34C4" size=+3>Android</font>
            <font color = "#097CD1" size=+3>BKIC</font>]]>
    </string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_not_member">Chưa có tài khoản? Tạo một</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_account_info">Thông Tin Tài Khoản</string>
    <string name="hint_welcome">Chào mừng bạn đến với ứng dụng sách nói</string>
    <string name="hint_feedback"> Phản hồi và yêu cầu sách </string>
    <string name="hint_help">Hướng dẫn</string>
    <string name="hint_accountInfo">Thông tin tài khoản</string>
    <string name="hint_login">Xin mời đăng nhập tài khoản</string>
    <string name="hint_register">Đăng ký tài khoản mới</string>
    <string name="hint_name">Tên</string>
    <string name="hint_first_name">Tên</string>
    <string name="hint_last_name">Họ</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_or_username">Email hoặc tên đăng nhập</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_phone_number">Số điện thoại</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_identity_number">ID Number</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_confirm_password">Xác nhận mật khẩu</string>
    <string name="text_register">Đăng ký</string>
    <string name="error_message_first_name">Điền tên của bạn</string>
    <string name="error_message_last_name">Điền họ của bạn</string>
    <string name="error_message_username">Điền tên đăng nhập</string>
    <string name="error_message_phone_number">Điền số điện thoại</string>
    <string name="error_message_address">Điền địa chỉ</string>
    <string name="error_message_email">Điền Email</string>
    <string name="error_message_email_or_username">Điền Email hoặc tên đăng nhập</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Điền mật khẩu</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_already_member">Là hội viên? Đăng nhập</string>
    <string name="text_hello">Chào bạn, </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email không dúng</string>
    <string name="error_invalid_phone">Số điện thoại không dúng</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="date_of_birth_dd_mm_yyyy">Date Of Birth (dd/mm/yyyy)</string>
    <string name="register">REGISTER</string>
    <string name="username">Tên đăng nhập</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật Khẩu mới</string>
    <string name="logout">Đăng Xuất</string>
    <string name="already_a_member_login">Đã có tài khoản, Đăng nhập</string>
    <string name="Hello">Chào bạn,</string>
    <string name="tv_now_playing">NOW PLAYING</string>
    <string name="play">Chạy sách nói</string>
    <string name="pause">Dừng lại</string>
    <string name="stop">Nghe lại từ đầu</string>
    <string name="nextChapter">Chương tiếp theo</string>
    <string name="previousChapter">Chương trước đây</string>
    <string name="download">Tải xuống</string>
    <string name="backward">Lùi lại mười giây</string>
    <string name="forward">Tiến tới mười giây</string>
    <string name="add_book_to_favorite">Ghim sách vào yêu thích</string>
    <string name="add_favorite_book">Ghim Sách Vào Yêu Thích</string>
    <string name="time">00:00</string>
    <string name="toolbar">Toolbar</string>
    <string name="search">Tìm kiếm…</string>
    <string name="back_home">Quay lại trang chủ</string>
    <string name="refresh">Làm mới</string>
    <string name="back">Quay Lại</string>
    <string name="hint_home_screen">Trang chủ</string>
    <string name="application_icon">Application icon</string>
    <string name="sach_noi_bkic">Sách Nói BKIC</string>
    <string name="prompt_history">Lịch Sử</string>
    <string name="prompt_favorite">Yêu Thích</string>
    <string name="prompt_book_type">Thể Loại Sách</string>
    <string name="prompt_account">Tài Khoản</string>
    <string name="prompt_offline_book">Sách Đã Tải Xuống</string>
    <string name="prompt_search">Tìm Kiếm</string>
    <string name="prompt_help">Hướng Dẫn</string>
    <string name="welcome">Welcome</string>
    <string name="text">text</string>
    <string name="prompt_feedback">Phản hồi và yêu cầu sách</string>
    <string name="message_logout_failed">Bạn xác định không đăng xuất.</string>
    <string name="message_logout_success">Đăng Xuất Thành Công</string>
    <string name="no_data">Chưa cập nhật dữ liệu</string>
    <string name="buffering_data">Đang tải…</string>
    <string name="loading_data">Đang tải…</string>
    <string name="prompt_review_question">bạn cảm thấy quyển sách này có chất lượng thế nào</string>
    <string name="text_review_book">Đánh giá sách</string>
    <string name="text_review_chapter">Đánh giá chương</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="btn_submit">Cập nhật</string>
    <string name="btn_dismiss">Thoát</string>
    <string name="title_activity_second">Another Screen</string>
    <string name="hint_home_screen_test">Giao diện test</string>
    <string name="text_1_star">một sao</string>
    <string name="text_2_star">hai sao</string>
    <string name="text_3_star">ba sao</string>
    <string name="text_4_star">buốn sao</string>
    <string name="text_5_star">năm sao</string>
    <string name="update">Cập Nhật</string>
    <string name="text_cancel">Hủy</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="text_confirm_password">Xác Nhận Mật Khẩu</string>
    <string name="text_update_password">Cập Nhật Mật Khẩu Mới</string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Bắt Đầu Tải Xuống</string>
    <string name="downloadCompleted">Đã Tải Xuống</string>
    <string name="downloadFailed">Tải Xuống Thất Bại</string>
    <string name="downloadAgain">Tải Xuống Lại</string>
    <string name="message_exit">Nhấn lần nữa để thoát ứng dụng</string>
    <string name="message_internet_connected">\"Đã kết nối mạng\"</string>
    <string name="message_internet_not_connected">Chưa kết nối mạng</string>
    <string name="message_download_complete">đã tải xuống thành công</string>
    <string name="message_success">Thành công</string>
    <string name="message_chapter_not_exists">Chương bạn đã yêu cầu không tồn tại</string>
    <string name="message_thank_review">Cảm ơn bạn đã đánh giá</string>
    <string name="message_please_wait">Vui lòng chờ..</string>
    <string name="message_play_complete_chapter">Bạn đã nghe xong chương này</string>
    <string name="message_play_next_chapter_or_not">Bạn có muốn nghe chương tiếp theo không?</string>
    <string name="message_last_period">Bạn đã nghe tới %s, bạn có muốn nghe tiếp không?</string>
    <string name="option">Option</string>
    <string name="message_no_more_chapter">Không còn chương nào</string>
    <string name="message_no_rate_value">Bạn chưa chọn số mực đánh giá</string>
    <string name="TalkBack_Not_Active">Bạn chưa bật Talk Back</string>
    <string name="message_please_complete_old_password">Điền mật khẩu cũ</string>
    <string name="message_please_complete_new_password">Điền mật khẩu mới</string>
    <string name="message_please_complete_password">Điền mật khẩu</string>
    <string name="message_please_complete_confirm_password">Điền mật xác nhận khẩu</string>
    <string name="error_message_confirm_password_not_match">"Xác Nhận Mật Khẩu Chưa Đúng"</string>
    <string name="prompt_keyWord">Từ khóa\: %s</string>
    <string name="message_no_more_book">Không còn sách nào</string>
    <string name="continue_listening">Nghe tiếp</string>
    <string name="replay_chapter">Nghe lại</string>
    <string name="is_playing_chapter">Sách nói đang chạy</string>
    <string name="last_period_time_hour">%d giờ %d phút %d giây</string>
    <string name="last_period_time_min">%d phút %d giây</string>
    <string name="last_period_time_sec">%d giây</string>
    <string name="message_please_check_internet_connection">Vui lòng kiểm tra lại mạng</string>
    <string name="message_play_chapter_completed">Chương này đã chạy xong</string>
    <string name="item_book_cd_title_author_length">Sách %s của tác giả %s có độ dài %s </string>
    <string name="item_book_cd_title_author">Sách %s của tác giả %s</string>
    <string name="item_book_cd_title_only">Sách %s</string>
    <string name="item_chapter_cd_title_length">%s có độ dài %s</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="search_book">Tìm kiếm sách</string>
    <string name="message_not_exists">Không tồn tại</string>
    <string name="voice_search">Tìm kiếm bằng giọng nói</string>
    <string name="message_no_key_word">Không có từ khóa</string>
    <string name="error_message_no_sd_card">Oops!! There is no SD Card.</string>
    <string name="error_message_not_stable_internet">Mạng không ổn định</string>
    <string name="feedback_subject">Bạn muốn yêu cầu hay phản hồi sách </string>
    <string name="tv_subject">Chủ đề</string>
    <string name="tv_content">Nội dung</string>
    <string name="feedback_content"> Nhập nội dung ở đây </string>
    <string name="btn_send_email"> Gửi phản hồi </string>
</resources>